sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value getNombreDeValeurs
  for(i <- 0 to (getNombreDeValeurs-2)){
                 ^AlgBubbleSort2:6: error: not found: value getNombreDeValeurs
    for(j <- getNombreDeValeurs to 0 by -1){
             ^